--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
             color: white;
             text-align: center;
         }
+        /*Estilo para todas las clases*/
         p {
             font-family: verdana;
             font-size: 20px;
