--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,6 @@
         .background-color-special{
             background-color: rgb(94, 76, 76);
         } 
+        .btn{
+            color: blue;
+        }
